Adjusted project structure

--- a/agent/package.json
+++ b/agent/package.json
@@ -8,7 +8,8 @@
     "start": "tsc && node --loader ts-node/esm src/index.ts",
     "clean": "./scripts/clean.sh",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
-    "stop:service:all": "pm2 stop all"
+    "stop:service:all": "pm2 stop all",
+    "postinstall": "cd node_modules/better-sqlite3 && node-gyp rebuild"
   },
   "dependencies": {
     "@elizaos/adapter-postgres": "0.1.9",
@@ -37,11 +38,6 @@
   },
   "engines": {
     "node": ">=22"
-  },
-  "pnpm": {
-    "overrides": {
-      "onnxruntime-node": "1.20.0"
-    }
   },
   "devDependencies": {
     "ts-node": "10.9.2",
